@@ -1,34 +1,35 @@
 package io.github.hello09x.fakeplayer.manager;
 
 import io.github.hello09x.fakeplayer.Main;
+import io.github.hello09x.fakeplayer.config.FakeplayerConfig;
 import io.github.hello09x.fakeplayer.entity.FakePlayer;
-import io.github.hello09x.fakeplayer.entity.Metadata;
 import io.github.hello09x.fakeplayer.entity.SpawnOption;
-import io.github.hello09x.fakeplayer.entity.action.Action;
-import io.github.hello09x.fakeplayer.properties.FakeplayerProperties;
+import io.github.hello09x.fakeplayer.manager.action.Action;
+import io.github.hello09x.fakeplayer.manager.naming.NameManager;
+import io.github.hello09x.fakeplayer.manager.naming.SequenceName;
+import io.github.hello09x.fakeplayer.manager.naming.exception.IllegalCustomNameException;
 import io.github.hello09x.fakeplayer.repository.UsedIdRepository;
 import io.github.hello09x.fakeplayer.repository.UserConfigRepository;
 import io.github.hello09x.fakeplayer.repository.model.Configs;
 import io.github.hello09x.fakeplayer.util.AddressUtils;
+import io.github.hello09x.fakeplayer.util.Commands;
 import io.github.hello09x.fakeplayer.util.Tasker;
-import io.github.hello09x.fakeplayer.util.nms.NMS;
-import net.kyori.adventure.text.format.Style;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
-import org.bukkit.metadata.MetadataValue;
 import org.bukkit.scheduler.BukkitRunnable;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.nio.charset.StandardCharsets;
-import java.util.*;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
 import static net.kyori.adventure.text.Component.text;
 import static net.kyori.adventure.text.format.NamedTextColor.GRAY;
@@ -41,11 +42,13 @@ public class FakeplayerManager {
 
     private final static Logger log = Main.getInstance().getLogger();
 
-    private final FakeplayerProperties properties = FakeplayerProperties.instance;
+    private final FakeplayerConfig config = FakeplayerConfig.instance;
 
     private final UsedIdRepository usedIdRepository = UsedIdRepository.instance;
 
     private final NameManager nameManager = NameManager.instance;
+
+    private final FakeplayerList playerList = FakeplayerList.instance;
 
     private final UserConfigRepository userConfigRepository = UserConfigRepository.instance;
 
@@ -53,12 +56,12 @@ public class FakeplayerManager {
 
     private FakeplayerManager() {
         timer.scheduleAtFixedRate(() -> {
-                    if (Bukkit.getServer().getTPS()[1] < properties.getKaleTps()) {
+                    if (Bukkit.getServer().getTPS()[1] < config.getKaleTps()) {
                         new BukkitRunnable() {
                             @Override
                             public void run() {
                                 if (removeAll() > 0) {
-                                    Bukkit.getServer().broadcast(text("[服务器过于卡顿, 已移除所有假人]").style(Style.style(RED, ITALIC)));
+                                    Bukkit.broadcast(text("[服务器过于卡顿, 已移除所有假人]", RED, ITALIC));
                                 }
                             }
                         }.runTask(Main.getInstance());
@@ -67,66 +70,52 @@ public class FakeplayerManager {
         );
     }
 
-    private static List<String> standardCommands(List<String> commands) {
-        var ret = new ArrayList<String>(commands.size());
-        for (var cmd : commands) {
-            cmd = cmd.trim();
-            if (cmd.startsWith("/")) {
-                if (cmd.length() < 2) {
-                    continue;
-                }
-                cmd = cmd.substring(1);
-            }
-            if (cmd.isBlank()) {
-                continue;
-            }
-            ret.add(cmd);
-        }
-        return ret;
-    }
-
     /**
      * 创建一个假人
      *
      * @param creator 创建者
      * @param spawnAt 生成地点
      */
-    public synchronized @Nullable Player spawn(
+    public @Nullable Player spawn(
             @NotNull CommandSender creator,
-            @NotNull Location spawnAt
+            @NotNull String name,
+            @NotNull Location spawnAt,
+            @Nullable LocalDateTime removeAt
     ) {
-        var playerLimit = properties.getPlayerLimit();
+        var playerLimit = config.getPlayerLimit();
         if (!creator.isOp() && playerLimit != Integer.MAX_VALUE && getAll(creator).size() >= playerLimit) {
             creator.sendMessage(text("你创建的假人数量已达到上限", GRAY));
             return null;
         }
 
-        var serverLimit = properties.getServerLimit();
+        var serverLimit = config.getServerLimit();
         if (!creator.isOp() && serverLimit != Integer.MAX_VALUE && getAll().size() >= serverLimit) {
             creator.sendMessage(text("服务器假人数量已达到上限", GRAY));
             return null;
         }
 
-        if (!creator.isOp() && properties.isDetectIp() && countByAddress(AddressUtils.getAddress(creator)) >= 1) {
+        if (!creator.isOp() && config.isDetectIp() && countByAddress(AddressUtils.getAddress(creator)) >= 1) {
             creator.sendMessage(text("你所在 IP 创建的假人数量已达到上限", GRAY));
             return null;
         }
 
-        var sn = nameManager.take(creator);
+        SequenceName sn;
+        try {
+            sn = name.isBlank() ? nameManager.register(creator) : nameManager.custom(creator, name);
+        } catch (IllegalCustomNameException e) {
+            creator.sendMessage(e.getMsg());
+            return null;
+        }
 
         var player = new FakePlayer(
                 creator.getName(),
-                NMS.getInstance().getMinecraftServer(Bukkit.getServer()),
-                generateId(sn.name()),
-                sn.name()
+                AddressUtils.getAddress(creator),
+                sn,
+                removeAt
         );
 
         var bukkitPlayer = player.getBukkitPlayer();
-        Metadata.CREATOR.set(bukkitPlayer, creator.getName());
-        Metadata.CREATOR_IP.set(bukkitPlayer, AddressUtils.getAddress(creator));
-        Metadata.NAME_SOURCE.set(bukkitPlayer, sn.source());
-        Metadata.NAME_SEQUENCE.set(bukkitPlayer, sn.sequence());
-        bukkitPlayer.playerListName(text(bukkitPlayer.getName()).style(Style.style(GRAY, ITALIC)));
+        bukkitPlayer.playerListName(text(bukkitPlayer.getName(), GRAY, ITALIC));
 
         boolean invulnerable = true, lookAtEntity = true, collidable = true, pickupItems = true;
         if (creator instanceof Player p) {
@@ -144,10 +133,12 @@ public class FakeplayerManager {
                 pickupItems
         ));
 
+        playerList.add(player);
         usedIdRepository.add(bukkitPlayer.getUniqueId());
+
         Tasker.later(() -> {
-            dispatchCommands(bukkitPlayer, properties.getPreparingCommands());
-            performCommands(bukkitPlayer, properties.getSelfCommands());
+            dispatchCommands(bukkitPlayer, config.getPreparingCommands());
+            performCommands(bukkitPlayer, config.getSelfCommands());
         }, 20);
 
         return bukkitPlayer;
@@ -162,8 +153,9 @@ public class FakeplayerManager {
      */
     public @Nullable Player get(@NotNull CommandSender creator, @NotNull String name) {
         return Optional
-                .ofNullable(get(name))
-                .filter(faker -> Objects.equals(this.getCreator(faker), creator.getName()))
+                .ofNullable(playerList.getByName(name))
+                .filter(p -> p.getCreator().equals(creator.getName()))
+                .map(FakePlayer::getBukkitPlayer)
                 .orElse(null);
     }
 
@@ -175,21 +167,9 @@ public class FakeplayerManager {
      */
     public @Nullable Player get(@NotNull String name) {
         return Optional
-                .ofNullable(Bukkit.getServer().getPlayerExact(name))
-                .filter(this::isFake)
+                .ofNullable(playerList.getByName(name))
+                .map(FakePlayer::getBukkitPlayer)
                 .orElse(null);
-    }
-
-    /**
-     * 移除指定创建者创建的假人
-     *
-     * @param creator 创建者
-     * @return 移除假人的数量
-     */
-    public int removeAll(@NotNull CommandSender creator) {
-        var fakers = getAll(creator);
-        fakers.forEach(Player::kick);
-        return fakers.size();
     }
 
     /**
@@ -199,22 +179,26 @@ public class FakeplayerManager {
      * @return 名称对应的玩家不在线或者不是假人
      */
     public boolean remove(@NotNull String name) {
-        var fakePlayer = Optional.ofNullable(get(name)).filter(this::isFake).orElse(null);
-        if (fakePlayer == null) {
+        var player = get(name);
+        if (player == null) {
             return false;
         }
-        fakePlayer.kick();
+
+        player.kick(text("[fakeplayer] removed"));
         return true;
     }
 
     /**
      * 获取一个假人的创建者, 如果这个玩家不是假人, 则为 {@code null}
      *
-     * @param fakePlayer 假人
+     * @param player 假人
      * @return 假人的创建者
      */
-    public @Nullable String getCreator(@NotNull Player fakePlayer) {
-        return Metadata.CREATOR.getOptional(fakePlayer).map(MetadataValue::asString).orElse(null);
+    public @Nullable String getCreator(@NotNull Player player) {
+        return Optional
+                .ofNullable(playerList.getByUUID(player.getUniqueId()))
+                .map(FakePlayer::getCreator)
+                .orElse(null);
     }
 
     /**
@@ -232,26 +216,17 @@ public class FakeplayerManager {
      * @return 获取所有假人
      */
     public @NotNull List<Player> getAll() {
-        return Bukkit
-                .getServer()
-                .getOnlinePlayers()
-                .stream()
-                .filter(p -> Metadata.CREATOR.getOptional(p).isPresent())
-                .collect(Collectors.toList());
+        return playerList.getAll().stream().map(FakePlayer::getBukkitPlayer).toList();
     }
 
-    public void cleanup(@NotNull Player fakePlayer) {
-        if (!isFake(fakePlayer)) {
+    public void cleanup(@NotNull Player player) {
+        var fakeplayer = playerList.removeByUUID(player.getUniqueId());
+        if (fakeplayer == null) {
             return;
         }
-
-        nameManager.giveback(
-                Metadata.NAME_SOURCE.get(fakePlayer).asString(),
-                Metadata.NAME_SEQUENCE.get(fakePlayer).asInt()
-        );
-        Arrays.stream(Metadata.values()).forEach(meta -> meta.remove(fakePlayer));
-        if (properties.isDropInventoryOnQuiting()) {
-            Action.dropInventory(NMS.getInstance().getServerPlayer(fakePlayer));
+        nameManager.unregister(fakeplayer.getSequenceName());
+        if (config.isDropInventoryOnQuiting()) {
+            Action.dropInventory(Main.getNms().getServerPlayer(player));
         }
     }
 
@@ -262,13 +237,7 @@ public class FakeplayerManager {
      * @return 创建者创建的假人
      */
     public @NotNull List<Player> getAll(@NotNull CommandSender creator) {
-        var name = creator.getName();
-        return Bukkit
-                .getServer()
-                .getOnlinePlayers()
-                .stream()
-                .filter(p -> Metadata.CREATOR.getOptional(p).filter(c -> c.asString().equals(name)).isPresent())
-                .collect(Collectors.toList());
+        return playerList.getByCreator(creator.getName()).stream().map(FakePlayer::getBukkitPlayer).toList();
     }
 
     /**
@@ -278,7 +247,7 @@ public class FakeplayerManager {
      * @return 是否是假人
      */
     public boolean isFake(@NotNull Player player) {
-        return Metadata.CREATOR.getOptional(player).isPresent();
+        return playerList.getByUUID(player.getUniqueId()) != null;
     }
 
     /**
@@ -288,25 +257,11 @@ public class FakeplayerManager {
      * @return 该 IP 地址创建着多少个假人
      */
     public long countByAddress(@NotNull String address) {
-        return Bukkit.getServer()
-                .getOnlinePlayers()
+        return playerList
+                .getAll()
                 .stream()
-                .filter(p -> Metadata.CREATOR_IP.getOptional(p).map(MetadataValue::asString).filter(v -> v.equals(address)).isPresent())
+                .filter(p -> p.getCreatorIp().equals(address))
                 .count();
-    }
-
-    /**
-     * 生成一个 UUID
-     *
-     * @return UUID
-     */
-    private @NotNull UUID generateId(@NotNull String name) {
-        var uuid = UUID.nameUUIDFromBytes(name.getBytes(StandardCharsets.UTF_8));
-        if (Bukkit.getServer().getOfflinePlayer(uuid).hasPlayedBefore()) {
-            uuid = UUID.randomUUID();
-            log.warning("Could not generate a UUID bound with name which is never played at this server, using random UUID as fallback: " + uuid);
-        }
-        return uuid;
     }
 
     /**
@@ -323,7 +278,7 @@ public class FakeplayerManager {
             return;
         }
 
-        for (var cmd : standardCommands(commands)) {
+        for (var cmd : Commands.formatCommands(commands)) {
             if (!player.performCommand(cmd)) {
                 log.warning("执行命令失败: " + cmd);
             }
@@ -347,18 +302,12 @@ public class FakeplayerManager {
 
         var server = Bukkit.getServer();
         var sender = Bukkit.getConsoleSender();
-        for (var cmd : standardCommands(commands)) {
-            if (cmd.length() > 1) {
-                cmd = cmd
-                        .replace("%p", player.getName())
-                        .replace("%u", player.getUniqueId().toString())
-                        .replace("%c", Objects.requireNonNull(getCreator(player), "Missing creator id at fake player metadata"));
-            }
-
-            if (cmd.isBlank()) {
-                continue;
-            }
-
+        for (var cmd : Commands.formatCommands(
+                commands,
+                "%p", player.getName(),
+                "%u", player.getUniqueId().toString(),
+                "%c", Objects.requireNonNull(getCreator(player)))
+        ) {
             if (!server.dispatchCommand(sender, cmd)) {
                 log.warning("执行命令失败: " + cmd);
             }
